--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ img {
 #BlueDiv { 
   float: left;
   width:33%;
-  height: 900px; 
+  height: 400px; 
   text-align: center; 
  }
 
@@ -58,7 +58,7 @@ img {
  #RedDiv { 
    float: left; 
    width:33%;
-   height: 900px; 
+   height: 400px; 
    text-align: center; 
  }
 
@@ -69,7 +69,7 @@ img {
  #YellowDiv { 
    float: right;
    width:33%;
-   height: 900px; 
+   height: 400px; 
    text-align: center; 
  }
 
@@ -77,7 +77,10 @@ img {
    color: #e6cf00; 
  }
 
-
+/* For the button */
+#findMore {
+  font-weight: bold;  
+}
 
 /* footer styles  */
 
