--- a/style.css
+++ b/style.css
@@ -35,6 +35,12 @@ nav ul li a {
 
 /* body styles */
 
+div {
+  margin: 10px; 
+  padding: 10px; 
+  border-style: outset;
+}
+
 h3 { 
   color: maroon; 
 }
@@ -46,7 +52,7 @@ img {
 
 #BlueDiv { 
   float: left;
-  width:33%;
+  width: 30%;
   height: 400px; 
   text-align: center; 
  }
@@ -57,7 +63,7 @@ img {
 
  #RedDiv { 
    float: left; 
-   width:33%;
+   width: 30%;
    height: 400px; 
    text-align: center; 
  }
@@ -68,7 +74,7 @@ img {
 
  #YellowDiv { 
    float: right;
-   width:33%;
+   width: 29%;
    height: 400px; 
    text-align: center; 
  }
@@ -77,8 +83,15 @@ img {
    color: #e6cf00; 
  }
 
+#button {
+  float: left; 
+  width: 100%; 
+  height: 100%; 
+  text-align: center; 
+}
+
 /* For the button */
-#findMore {
+p.buttonInfoStyle {
   font-weight: bold;  
 }
 
@@ -86,4 +99,9 @@ img {
 
 footer { 
   text-align: center; 
+  position: fixed;
+  padding: 10px 10px 0px 10px;
+  bottom: 0;
+  width: 100%;
+  
 }
